2006-12-29  Brian Bidulock  <bidulock@openss7.org>

	* strnsl.spec.in: old rpms hate nested ifs
	* strnsl.spec.in: changes for successful master build
	* doc/manual/prerequisites.texi: changes for successful master build
	* src/lib/netselect.c: changes for successful master build

2006-12-18  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: adjust base majors and module ids
	* src/lib/netselect.c: compiler warning correction
	* src/test/test-xnsl.c: use clone directory device names
	* tests/testsuite-xnsl.at: removed xnet specific stuff
	* tests/testsuite-xnsl_thr.at: removed xnet specific stuff

2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>

	* debian/mscript_postinst.in: debian script corrections
	* debian/mscript_postrm.in: debian script corrections
	* debian/mscript_preinst.in: debian script corrections
	* debian/rules.in: debian script corrections
	* debian/strnsl-devel.preinst.in: debian script corrections

2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases
	* tests/testsuite-xnsl.at: added ability to sync between test cases
	* tests/testsuite-xnsl_thr.at: added ability to sync between test cases

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strnsl.refs: updated streams release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strnsl.refs: updates for release
	* doc/manual/descrip.texi: updates for release

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/descrip.texi: updates for release