@@ -1,5 +1,5 @@
-OpenSS7 STREAMS Network Services Library -- authors.  2006-10-27
-$Id: AUTHORS,v 0.9.2.5 2006/10/27 22:24:05 brian Exp $
+OpenSS7 STREAMS Network Services Library -- authors.  2006-12-29
+$Id: AUTHORS,v 0.9.2.6 2006/12/31 13:47:41 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
 See the end for copying conditions (for this file).
