@@ -1,5 +1,5 @@
-OpenSS7 STREAMS Network Services Library -- read me CVS file.  2006-10-27
-$Id: README-cvs,v 0.9.2.3 2006/11/30 12:49:26 brian Exp $
+OpenSS7 STREAMS Network Services Library -- read me CVS file.  2006-12-29
+$Id: README-cvs,v 0.9.2.4 2006/12/31 13:47:41 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
 See the end for copying conditions (for this file).
