@@ -1,0 +1,341 @@
+'\" rtp
+.\" -*- nroff -*- vim: ft=nroff nocin nosi
+.\"
+.\" @(#) $Id: strnsl.5.man,v 0.9.2.1 2006/12/31 13:46:25 brian Exp $
+.\"
+.\" =========================================================================
+.\"
+.\" Copyright (c) 2001-2007  OpenSS7 Corporation <http://www.openss7.com/>
+.\"
+.\" All Rights Reserved.
+.\"
+.\" Permission is granted to make and distribute verbatim copies of this
+.\" manual provided the copyright notice and this permission notice are
+.\" preserved on all copies.
+.\"
+.\" Permission is granted to copy and distribute modified versions of this
+.\" manual under the conditions for verbatim copying, provided that the
+.\" entire resulting derived work is distributed under the terms of a
+.\" permission notice identical to this one
+.\" 
+.\" Since the Linux kernel and libraries are constantly changing, this
+.\" manual page may be incorrect or out-of-date.  The author(s) assume no
+.\" responsibility for errors or omissions, or for damages resulting from
+.\" the use of the information contained herein.  The author(s) may not
+.\" have taken the same level of care in the production of this manual,
+.\" which is licensed free of charge, as they might when working
+.\" professionally.  The author(s) will take no responsibility in it.
+.\" 
+.\" Formatted or processed versions of this manual, if unaccompanied by
+.\" the source, must acknowledge the copyright and authors of this work.
+.\"
+.\" -------------------------------------------------------------------------
+.\"
+.\" U.S. GOVERNMENT RESTRICTED RIGHTS.  If you are licensing this Software
+.\" on behalf of the U.S. Government ("Government"), the following
+.\" provisions apply to you.  If the Software is supplied by the Department
+.\" of Defense ("DoD"), it is classified as "Commercial Computer Software"
+.\" under paragraph 252.227-7014 of the DoD Supplement to the Federal
+.\" Acquisition Regulations ("DFARS") (or any successor regulations) and the
+.\" Government is acquiring only the license rights granted herein (the
+.\" license rights customarily provided to non-Government users).  If the
+.\" Software is supplied to any unit or agency of the Government other than
+.\" DoD, it is classified as "Restricted Computer Software" and the
+.\" Government's rights in the Software are defined in paragraph 52.227-19
+.\" of the Federal Acquisition Regulations ("FAR") (or any successor
+.\" regulations) or, in the cases of NASA, in paragraph 18.52.227-86 of the
+.\" NASA Supplement to the FAR (or any successor regulations).
+.\"
+.\" =========================================================================
+.\" 
+.\" Commercial licensing and support of this software is available from
+.\" OpenSS7 Corporation at a fee.  See http://www.openss7.com/
+.\" 
+.\" =========================================================================
+.\"
+.\" Last Modified $Date: 2006/12/31 13:46:25 $ by $Author: brian $
+.\"
+.\" -------------------------------------------------------------------------
+.\"
+.\" $Log: strnsl.5.man,v $
+.\" Revision 0.9.2.1  2006/12/31 13:46:25  brian
+.\" - added package manual page
+.\"
+.\" =========================================================================
+.R1
+bracket-label "\fR[\fB" "\fR]" "\fR, \fB"
+no-default-database
+database strnsl.refs
+accumulate
+move-punctuation
+abbreviate A
+join-authors ", " ", " " and "
+et-al " et al" 2 3
+abbreviate-label-ranges ".."
+sort-adjacent-labels
+.R2
+.so strnsl.macros
+.\"
+.\"
+.TH STRNSL 5 "@PACKAGE_DATE@" "@PACKAGE@-@VERSION@" "@PACKAGE_TITLE@ System File Formats"
+.\"
+.\"
+.SH NAME
+.B @PACKAGE@
+\- @PACKAGE_TITLE@ package
+.\"
+.\"
+.SH OVERVIEW
+.PP
+This is the
+.BR "@PACKAGE_TITLE@ " ( @PACKAGE@-@VERSION@ )
+package for
+.BR "Linux Fast-STREAMS" .
+.[
+lfs
+.]
+.PP
+.BR "Linux Fast-STREAMS" ,
+.BR streams (5),
+consists of a base package that provides basic
+.I SVR 4.2 STREAMS
+capabilities for
+.B Linux
+and a number of separate add-on packages.
+.PP
+OpenSS7
+.I STREAMS
+add-on packages provide additional functionality and protocol support not traditionally found on
+UNIX systems, or which have traditionally fallen into the domain of value-add system software, or,
+in this case, where functionality was optional or differently handled in a number of
+implementations.
+.PP
+The
+.B @PACKAGE_TITLE@
+package is one of the several optional add-on packages that provide enhanced network service support
+beyond that provided by the base
+.I STREAMS
+package.  This package provides support for library functions termed the
+.I Network Services Library
+not provided by the base package.
+.\"
+.\"
+.SH DESCRIPTION
+.PP
+The
+.B @PACKAGE_TITLE@
+package provides lirbaries, programs, init scripts, and daemons that implement name services for the
+XTI/TLI library.
+.PP
+The package builds and installs the following
+.I STREAMS
+user libraries:
+.TP
+.BR libxnsl (3)
+.PP
+The
+.B @PACKAGE_TITLE@
+package includes libraries, utilities, test programs, daemons, and development environment for the
+development and execution of
+.B @PACKAGE_TITLE@
+applications for the XTI/TLI library environment.
+.PP
+This distribution is only currently applicable to
+.B Linux
+2.4 and 2.6 kernels and was targeted at
+.IR ix86 ", " x86_64 ", " ppc " and " ppc64
+architectures, but should build and install for other architectures as well.
+.PP
+This package is complete but has been largely untested.
+.\"
+.\"
+.SH "PACKAGE CONTENTS"
+.PP
+.HP
+.BR libxnsl (3)\ \-\ 
+.PD 0
+.HP
+.BR xnsl (3)\ \-\ 
+.HP
+.BR endnetconfig (3)\ \-\ 
+.HP
+.BR endnetpath (3)\ \-\ 
+.HP
+.BR freenetconfigent (3)\ \-\ 
+.HP
+.BR getnetconfig (3)\ \-\ 
+.HP
+.BR getnetconfigent (3)\ \-\ 
+.HP
+.BR getnetpath (3)\ \-\ 
+.HP
+.BR inetaddr (3)\ \-\ 
+.HP
+.BR nc_perror (3)\ \-\ 
+.HP
+.BR nc_sperror (3)\ \-\ 
+.HP
+.BR _nderror (3)\ \-\ 
+.HP
+.BR netbuf (3)\ \-\ 
+.HP
+.BR netconfig (3)\ \-\ 
+.HP
+.BR netdir (3)\ \-\ 
+.HP
+.BR netdir_free (3)\ \-\ 
+.HP
+.BR netdir_getbyaddr (3)\ \-\ 
+.HP
+.BR netdir_getbyname (3)\ \-\ 
+.HP
+.BR netdir_options (3)\ \-\ 
+.HP
+.BR netdir_perror (3)\ \-\ 
+.HP
+.BR netdir_sperror (3)\ \-\ 
+.HP
+.BR netpath (3)\ \-\ 
+.HP
+.BR setnetconfig (3)\ \-\ 
+.HP
+.BR setnetpath (3)\ \-\ 
+.HP
+.BR taddr2uaddr (3)\ \-\ 
+.HP
+.BR uaddr2taddr (3)\ \-\ 
+.HP
+.BR netconfig (5)\ \-\ 
+.HP
+.BR netdir (5)\ \-\ 
+.HP
+.BR strnsl (5)\ \-\ 
+.HP
+.BR test-xnsl (8)\ \-\ 
+.HP
+.BR test-xnsl_thr (8)\ \-\ 
+.PD
+.\"
+.\"
+.SH MODULES
+.PP
+None.
+.\"
+.\"
+.SH DEVICES
+.PP
+None.
+.\"
+.\"
+.SH PREREQUISITES
+.PP
+.TP
+.BR streams (5)
+The
+.B Linux Fast-STREAMS
+base package.
+.TP
+.BR strcompat (5)
+The
+.B Linux Fast-STREAMS
+compatiblity modules.
+.TP
+.BR strxnet (5)
+The
+.B Linux Fast-STREAMS
+XTI/TLI library.
+.TP
+.BR strsock (5)
+The
+.B Linux Fast-STREAMS
+Sockets library.
+.\"
+.\"
+.SH NOTICES
+.PP
+Although previous releases of
+.B @PACKAGE@
+was compatible with
+.IR LiS ,
+.I LiS
+is now deprecated and this release
+.RB ( @VERSION@ )
+of
+.B @PACKAGE@
+has not been tested with
+.IR LiS .
+.I The OpenSS7 Project
+will not support this package for
+.IR LiS :
+please upgrade to
+.BR "Linux Fast-STREAMS" .
+.\"
+.\"
+.SH BUGS
+.PP
+The
+.B @PACKAGE@
+package is compataible with a wide array of production
+.B Linux
+distributions, kernels, and target architectures, but is considered alpha grade by
+.IR "The OpenSS7 Project" .
+At the time of release, the
+.B @PACKAGE@
+package had no known bugs.  Problems can be reported to
+.RB < bugs@openss7.org >.
+Please, however, use the included
+.B send-pr
+script for generating actionable problem reports.
+.\"
+.\"
+.SH "SEE ALSO"
+.PP
+.BR libxnsl (3),
+.BR xnsl (3),
+.BR endnetconfig (3),
+.BR endnetpath (3),
+.BR freenetconfigent (3),
+.BR getnetconfig (3),
+.BR getnetconfigent (3),
+.BR getnetpath (3),
+.BR inetaddr (3),
+.BR nc_perror (3),
+.BR nc_sperror (3),
+.BR _nderror (3),
+.BR netbuf (3),
+.BR netconfig (3),
+.BR netdir (3),
+.BR netdir_free (3),
+.BR netdir_getbyaddr (3),
+.BR netdir_getbyname (3),
+.BR netdir_options (3),
+.BR netdir_perror (3),
+.BR netdir_sperror (3),
+.BR netpath (3),
+.BR setnetconfig (3),
+.BR setnetpath (3),
+.BR taddr2uaddr (3),
+.BR uaddr2taddr (3),
+.BR netconfig (5),
+.BR netdir (5),
+.BR strnsl (5),
+.BR test-xnsl (8),
+.BR test-xnsl_thr (8).
+.\"
+.\"
+.SH COMPATIBILITY
+.PP
+.\"
+.\"
+.SH CONFORMANCE
+.PP
+.\"
+.\"
+.SH HISTORY
+.PP
+.\"
+.\"
+.[
+$LIST$
+.]
+.TI
