@@ -1,10 +1,10 @@
 .\" -*- nroff -*- vim: ft=nroff
 .\"
-.\" @(#) $Id: strnsl.macros,v 0.9.2.1 2006/09/25 12:30:48 brian Exp $
+.\" @(#) $Id: strnsl.macros,v 0.9.2.2 2006/12/31 13:47:42 brian Exp $
 .\"
 .\" =========================================================================
 .\"
-.\" Copyright (C) 2001-2006  OpenSS7 Corporation <www.openss7.com>
+.\" Copyright (C) 2001-2007  OpenSS7 Corporation <www.openss7.com>
 .\"
 .\" All Rights Reserved.
 .\"
@@ -52,7 +52,7 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/09/25 12:30:48 $ by $Author: brian $
+.\" Last Modified $Date: 2006/12/31 13:47:42 $ by $Author: brian $
 .\"
 .\" =========================================================================
 .de ]<
@@ -160,7 +160,7 @@ Trademarks mentioned are the property of their owners.
 .de CO
 .SH "COPYRIGHT"
 .PP
-\f(HRCopyright\ \(co\ 1997-2006\ OpenSS7 Corporation.
+\f(HRCopyright\ \(co\ 1997-2007\ OpenSS7 Corporation.
 .br
 \f(HRAll Rights Reserved.
 .ie '\\*(.T'ps' \{\
@@ -222,7 +222,7 @@ PERFORMANCE OF THIS DOCUMENTATION.
 .PP
 .\}
 .el .br
-\f(HRCopyright\ \(co\ 1997-2006\ OpenSS7 Corporation.
+\f(HRCopyright\ \(co\ 1997-2007\ OpenSS7 Corporation.
 .br
 \f(HRAll Rights Reserved.
 .ie '\\*(.T'ps' \{\
@@ -314,7 +314,7 @@ The OpenSS7 Project http://www.openss7.org/
 .HP
 @PACKAGE_TITLE@: Package @PACKAGE@ version @VERSION@ released @PACKAGE_DATE@.
 .PP
-\f(HRCopyright\ \(co\ 1997-2006\ OpenSS7 Corp.
+\f(HRCopyright\ \(co\ 1997-2007\ OpenSS7 Corp.
 .if (\n[.l]u < 80n) \{\
 .br
 .\}
@@ -333,7 +333,7 @@ All Rights Reserved.
 .PP
 \f(HRCopyright\ \(co\ 1992\ UNIX International, Inc.
 .br
-\f(HRCopyright\ \(co\ 1997-2006\ OpenSS7 Corp.
+\f(HRCopyright\ \(co\ 1997-2007\ OpenSS7 Corp.
 .if (\n[.l]u < 80n) \{\
 .br
 .\}
@@ -352,7 +352,7 @@ All Rights Reserved.
 .PP
 \f(HRCopyright\ \(co\ 2000\ John A. Boyd Jr.  protologos, LLC
 .br
-\f(HRCopyright\ \(co\ 2001-2006\ OpenSS7 Corp.
+\f(HRCopyright\ \(co\ 2001-2007\ OpenSS7 Corp.
 .if (\n[.l]u < 80n) \{\
 .br
 .\}
@@ -369,7 +369,7 @@ All Rights Reserved.
 .HP
 @PACKAGE_TITLE@: Package @PACKAGE@ version @VERSION@ released @PACKAGE_DATE@.
 .PP
-\f(HRCopyright\ \(co\ 1997-2006\ OpenSS7 Corp.
+\f(HRCopyright\ \(co\ 1997-2007\ OpenSS7 Corp.
 .if (\n[.l]u < 80n) \{\
 .br
 .\}
@@ -385,9 +385,9 @@ All Rights Reserved.
 .hy 0
 .HP
 @PACKAGE_TITLE@: Package @PACKAGE@ version @VERSION@ released @PACKAGE_DATE@.
-.\"OpenSS7 Iperf: $Name:  $($Revision: 0.9.2.1 $); $Date: 2006/09/25 12:30:48 $.
+.\"OpenSS7 Iperf: $Name:  $($Revision: 0.9.2.2 $); $Date: 2006/12/31 13:47:42 $.
 .PP
-\f(HRCopyright\ \(co\ 1997-2006\ OpenSS7 Corp.
+\f(HRCopyright\ \(co\ 1997-2007\ OpenSS7 Corp.
 .br
 \f(HRCopyright\ \(co\ 1999-2004\ The Board of Trustees of the University of Illinois
 .if (\n[.l]u < 80n) \{\
