@@ -1,0 +1,81 @@
+@ignore
+/usr
+/usr/include
+/usr/include/strnsl
+/usr/include/strnsl/sys
+/usr/include/strnsl/sys/strnsl
+/usr/include/strnsl/sys/strnsl/config.h
+/usr/include/strnsl/sys/strnsl/version.h
+/usr/include/strnsl/sys/netconfig.h
+/usr/include/strnsl/netdir.h
+/usr/include/strnsl/netconfig.h
+/usr/share
+/usr/share/man
+/usr/share/man/strnsl.macros
+/usr/share/man/strnsl.refs
+/usr/share/man/man3
+/usr/share/man/man3/endnetconfig.3
+/usr/share/man/man3/endnetpath.3
+/usr/share/man/man3/freenetconfigent.3
+/usr/share/man/man3/getnetconfig.3
+/usr/share/man/man3/getnetconfigent.3
+/usr/share/man/man3/getnetpath.3
+/usr/share/man/man3/libxnsl.3
+/usr/share/man/man3/nc_perror.3
+/usr/share/man/man3/nc_sperror.3
+/usr/share/man/man3/_nderror.3
+/usr/share/man/man3/netbuf.3
+/usr/share/man/man3/netconfig.3
+/usr/share/man/man3/netdir.3
+/usr/share/man/man3/netdir_free.3
+/usr/share/man/man3/netdir_getbyaddr.3
+/usr/share/man/man3/netdir_getbyname.3
+/usr/share/man/man3/netdir_options.3
+/usr/share/man/man3/netdir_perror.3
+/usr/share/man/man3/netdir_sperror.3
+/usr/share/man/man3/netpath.3
+/usr/share/man/man3/setnetconfig.3
+/usr/share/man/man3/setnetpath.3
+/usr/share/man/man3/taddr2uaddr.3
+/usr/share/man/man3/uaddr2taddr.3
+/usr/share/man/man3/xnsl.3
+/usr/share/man/man3/inetaddr.3
+/usr/share/man/man5
+/usr/share/man/man5/strnsl.5
+/usr/share/man/man5/netconfig.5
+/usr/share/man/man5/netdir.5
+/usr/share/man/man8
+/usr/share/man/man8/test-xnsl.8
+/usr/share/man/man8/test-xnsl_thr.8
+/usr/share/info
+/usr/share/info/strnsl.info
+/usr/share/info/strnsl.info-1
+/usr/share/info/strnsl.info-2
+/usr/share/info/libxnsl.info
+/usr/libexec
+/usr/libexec/strnsl
+/usr/libexec/strnsl/send-pr
+/usr/libexec/strnsl/send-pr.config
+/usr/libexec/strnsl/test-xnsl
+/usr/libexec/strnsl/test-xnsl_thr
+/usr/libexec/strnsl/testsuite
+/usr/libexec/strnsl/atlocal
+/usr/lib
+/usr/lib/libxnsl.so.0.0.0
+/usr/lib/libxnsl.so.0
+/usr/lib/libxnsl.so
+/usr/lib/libxnsl.la
+/usr/lib/libxnsl.a
+/usr/lib/inetaddr.so
+/usr/lib/inetaddr.la
+/usr/lib/inetaddr.a
+/usr/sbin
+/etc
+/etc/netconfig
+/etc/default
+/etc/init.d
+/lib
+/lib/modules
+/lib/modules/2.6.15-27-server
+/lib/modules/2.6.15-27-server/strnsl
+@end ignore
