@@ -1,5 +1,5 @@
-OpenSS7 STREAMS Network Services Library -- history of user visible changes.  2006-10-27
-$Id: NEWS,v 0.9.2.5 2006/10/27 22:24:05 brian Exp $
+OpenSS7 STREAMS Network Services Library -- history of user visible changes.  2006-12-29
+$Id: NEWS,v 0.9.2.6 2006/12/31 13:47:41 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
 See the end for copying conditions (for this file).
@@ -11,6 +11,9 @@ OpenSS7 STREAMS Network Services Library package.
 -----------------------------------------
 
 Initial autoconf/RPM packaging of the `strnsl' release.
+
+   * Support for most recent 2.6.18 kernels (including Fedora Core 5
+     with inode diet patchset).
 
 -----
 
