@@ -1,3 +1,15 @@
+2006-12-31  Brian Bidulock  <bidulock@openss7.org>
+
+	* AUTHORS: updated documentation for release
+	* NEWS: updated documentation for release
+	* README: updated documentation for release
+	* README-cvs: updated documentation for release
+	* THANKS: updated documentation for release
+	* doc/man/Makefile.am: updated documentation for release
+	* doc/man/strnsl.macros: updated documentation for release
+	* doc/man/man5/strnsl.5.man: updated documentation for release
+	* doc/manual/tree.texi: updated documentation for release
+
 2006-12-29  Brian Bidulock  <bidulock@openss7.org>
 
 	* strnsl.spec.in: old rpms hate nested ifs
